--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-is": "^16.13.1",
     "styled-components": "^5.3.5"
   }
