--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
@@ -38,9 +39,12 @@
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-is": "^16.13.1",
-    "styled-components": "^5.3.5"
+    "react-move": "^6.5.0",
+    "styled-components": "^5.3.5",
+    "victory": "^36.6.0"
   }
 }
