--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "homepage": "https://github.com/Jesse132/SaveUp#readme",
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@react-google-maps/api": "^2.12.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
