--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "google-map-react": "^2.2.0",
+    "google-maps-react": "^2.0.6",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
