--- a/package.json
+++ b/package.json
@@ -33,22 +33,18 @@
   "homepage": "https://github.com/Jesse132/SaveUp#readme",
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@react-google-maps/api": "^2.12.1",
     "axios": "^0.27.2",
+    "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "google-map-react": "^2.2.0",
-    "google-maps-react": "^2.0.6",
     "mongoose": "^6.5.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
-    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-is": "^16.13.1",
     "react-move": "^6.5.0",
-    "styled-components": "^5.3.5",
-    "victory": "^36.6.0"
+    "styled-components": "^5.3.5"
   }
 }
